--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<3.13"
+symspellpy = "~=6.7.8"
 hydra-core = "~=1.3.2"
 pydantic = "~=2.8.2"
-google-cloud-secret-manager = "~=2.20.2"
 mlflow = "~=2.16.0"
 dvc = {version = "~=3.55.2", extras=["gdrive", "gs"]}
 joblib = "~=1.4.2"
@@ -37,8 +37,13 @@ shap = "~=0.46.0"
 eli5 = "~=0.13.0"
 transformers = {version = "~=4.44.2", extras=["tensorflow"]}
 tokenizers = "~=0.19.0"
-
-
+fsspec = {version = "~=2024.9.0", extras=["gcs"]}
+gcsfs = "~=2024.9"
+google-cloud-secret-manager = "~=2.20.2"
+fastparquet = "~=2024.5"
+distributed = "~=2024.8"
+dask-cloudprovider = {version = "2022.10", extras=["gcp"]}
+dask-ml = "~=2024.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "~=8.3.2"
