--- a/src/configs/config.yaml
+++ b/src/configs/config.yaml
@@ -1,7 +1,8 @@
 defaults:
   - config_schema
   - dataset_reader_manager: dataset_reader_manager
-  - dataset_cleaner_manager: dataset_cleaner_manager  
+  - dataset_cleaner_manager: dataset_cleaner_manager
+  - dask_cluster: local_dask_cluster
   - override hydra/job_logging: custom
   - override hydra/hydra_logging: disabled
   - _self_
@@ -12,3 +13,7 @@ hydra:
     dir: .
 
 version: v1
+
+use_dask: false
+
+processed_data_save_dir: ./data/processed
