config partly successful, need to revert process_data

--- a/src/configs/dataset_reader_manager/dataset_reader_manager.yaml
+++ b/src/configs/dataset_reader_manager/dataset_reader_manager.yaml
@@ -1,6 +1,5 @@
 defaults:
   - dataset_reader_manager_schema
-  - dataset_reader_manager/dataset_readers@x = xdataset_reader_schema
 
-dataset_reader_manager:
-  use_dask: ${use_dask}
+dataset_readers: {}
+use_dask: ${use_dask}
