--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ lightgbm = "~=4.5.0"
 matplotlib = "~=3.9.2"
 seaborn = "~=0.13.2"
 plotly = "~=5.24.0"
+bokeh = "~=3.5.2"
 tqdm = "~=4.66.5"
 missingno = "~=0.5.2"
 feature-engine = "~=1.8.1"
