--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ symspellpy = "~=6.7.8"
 hydra-core = "~=1.3.2"
 pydantic = "~=2.8.2"
 mlflow = "~=2.16.0"
+psycopg = "~=3.2.2"
 dvc = {version = "~=3.55.2", extras=["gdrive", "gs"]}
 joblib = "~=1.4.2"
 tensorflow = "~=2.17.0"
@@ -41,6 +42,7 @@ tokenizers = "~=0.19.0"
 fsspec = {version = "~=2024.9.0", extras=["gcs"]}
 gcsfs = "~=2024.9"
 google-cloud-secret-manager = "~=2.20.2"
+google-cloud-compute = "~=1.19.2"
 fastparquet = "~=2024.5"
 distributed = "~=2024.8"
 dask-cloudprovider = {version = "2022.10", extras=["gcp"]}
